# jet

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.rst  setup.py
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: documentation.yml  format.yml  nightly.yml  python.yml  tests.yml  wheels.yml
bmw/: UnitaryPreperation.py  demo.ipynb  demo.py  tnf.json
cmake/: FindCBLAS.cmake  FindMKL.cmake
demo/: .gitignore  demo.ipynb  jet.py  requirements.txt  simulon_gaussian.py  simulon_gaussian_local.py  simulon_jet.py  simulon_jet_local.py
docs/: conf.py  index.rst  requirements.txt
docs/_ext/: edit_on_github.py
docs/_static/schema/: tensor_network.json
docs/_templates/autosummary_core/: base.rst  class.rst  module.rst
docs/code/: jet.rst  jet_bindings.rst  jet_circuit.rst  jet_factory.rst  jet_gate.rst  jet_interpreter.rst  jet_state.rst
docs/dev/: guide.rst  releases.rst  research.rst
docs/use/: introduction.rst  tensor_network_files.rst  tensor_networks.rst  tensors.rst
docs/xanadu_theme/: footer.html  header.html  layout.html
docs/xanadu_theme/static/: xanadu.css_t
examples/: heterogeneous_contraction.cu
examples/CudaTensor/: CMakeLists.txt  CudaTensor_Contract.cpp
examples/paper_benchmarks/: README.md  env_setup.sh  plot_bar_example.py  plot_data.py  requirements.txt
examples/paper_benchmarks/CPU/jet_cpu_gbs/: CMakeLists.txt  jet_gbs_full.cpp  jet_gbs_sliced.cpp  niagara_jet_full_0amp.slurm  niagara_jet_full_random.slurm  niagara_jet_sliced_random.slurm  niagara_submit.slurm
examples/paper_benchmarks/GPU/jet_gpu_m10/: CMakeLists.txt  cedar_jet_full.slurm  cedar_jet_sliced.slurm  jet_full.cpp  jet_sliced.cpp  run_full.sh  run_sliced.sh
examples/paper_benchmarks/data_files/: gbs.json  gbs_8x8.xbb  gbs_8x8_0amp.json  gbs_8x8_random.json  gbs_dim2_nc1_lw8_rp5_fock4_total0_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock4_total10_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock4_total20_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock4_total30_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock4_total40_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock4_total50_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock4_total60_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock8_total0_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock8_total10_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock8_total20_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock8_total30_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock8_total40_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock8_total50_0.kraken.json  gbs_dim2_nc1_lw8_rp5_fock8_total60_0.kraken.json  m10.json  m12.json
examples/paper_benchmarks/jet_cpu/: CMakeLists.txt  jet_sliced.cpp  jet_sliced_data.csv  niagara_jet_default.slurm  niagara_jet_sliced.slurm
examples/paper_benchmarks/jet_cpu_m10/: CMakeLists.txt  jet_sliced.cpp  niagara_jet_default.slurm  niagara_jet_sliced.slurm
examples/paper_benchmarks/jet_cpu_m12/: CMakeLists.txt  jet_sliced.cpp  jet_sliced_all.cpp  jet_sliced_single.cpp  jet_sliced_subset.cpp  niagara_jet_m12_all.slurm  niagara_jet_m12_single.slurm  niagara_jet_m12_sliced.slurm  niagara_jet_m12_subset.slurm
examples/paper_benchmarks/jet_gbs/: CMakeLists.txt  jet_gbs_full.cpp  jet_gbs_sliced.cpp  niagara_jet_default.slurm  niagara_jet_sliced.slurm
examples/paper_benchmarks/jet_gpu_m10/: CMakeLists.txt  cedar_jet_full.slurm  cedar_jet_sliced.slurm  jet_full.cpp  jet_sliced.cpp
examples/paper_benchmarks/jet_gpu_m12/: CMakeLists.txt  jet_sliced_single.cpp  jet_sliced_subset.cpp
examples/paper_data/: README.md
examples/paper_data/jet_cpu/: jet_default.cpp  jet_sliced.cpp
include/: Jet.hpp
include/jet/: Abort.hpp  CudaTensor.hpp  CudaTensorHelpers.hpp  GpuContractionTaskCreator.hpp  PathInfo.hpp  Permute.hpp  TaskBasedContractor.hpp  TaskBasedCpuContractor.hpp  Tensor.hpp  TensorHelpers.hpp  TensorNetwork.hpp  TensorNetworkIO.hpp  Utilities.hpp  Version.hpp
include/jet/Permute/: Base.hpp  Default.hpp  Hptt.hpp  Naive.hpp  Permute.hpp  QFlex.hpp
include/jet/path_optimizer/: GreedyPathOptimizer.hpp
include/jet/permute/: Common.hpp  Default.hpp  Hptt.hpp  Permuter.hpp  PermuterIncludes.hpp  QFlex.hpp
python/: .pylintrc  CMakeLists.txt  Makefile  requirements-dev.txt  requirements.txt  requirements_test.txt  setup.py
python/ir/: __init__.py  parser.py  program.py  usage_guide.md  utils.py
python/ir/interfaces/: strawberryfields_io.py
python/ir/tests/: test_program.py
python/jet/: __init__.py  circuit.py  factory.py  gate.py  gates.py  interpreter.py  state.py
python/src/: PathInfo.hpp  Python.cpp  TaskBasedContractor.hpp  TaskBasedCpuContractor.hpp  Tensor.hpp  TensorNetwork.hpp  TensorNetworkIO.hpp  Type.hpp  Version.hpp
python/tests/: conftest.py  test_gate.py  test_interpreter.py  test_pathinfo.py  test_state.py  test_task_based_contractor.py  test_tensor.py  test_tensor_network.py  test_tensor_network_io.py  test_version.py
python/tests/ir/: test_integration.py  test_io.py  test_utils.py
python/tests/jet/: conftest.py  test_circuit.py  test_gate.py  test_gates.py  test_interpreter.py  test_pathinfo.py  test_state.py  test_task_based_contractor.py  test_task_based_cpu_contractor.py  test_tensor.py  test_tensor_network.py  test_tensor_network_io.py  test_version.py
python/tests/xir/: test_decimal_complex.py  test_integration.py  test_io.py  test_parser.py  test_program.py  test_utils.py
python/xir/: __init__.py  _version.py  decimal_complex.py  ir.lark  parser.py  program.py  utils.py
python/xir/interfaces/: __init__.py  pennylane_io.py  strawberryfields_io.py
src/: Python.cpp
test/: CMakeLists.txt  Test_Abort.cpp  Test_CudaTensor.cpp  Test_CudaTensor.cu  Test_Main.cpp  Test_PathInfo.cpp  Test_PathOptimizer  Test_PathOptimizer.cpp  Test_Permute.cpp  Test_Permuter.cpp  Test_Slicer.cpp  Test_TaskBasedContractor.cpp  Test_TaskBasedCpuContractor.cpp  Test_Tensor.cpp  Test_TensorNetwork.cpp  Test_TensorNetworkIO.cpp  Test_Utilities.cpp  m10_no_simplify.jet  m10_rank_simplify.json
(+30 files in other folders)
